# AI-Drugdiscovery

./: .gitignore  README.md  pyproject.toml
ChemDesigner/: .replit  PROJECT_DESCRIPTION.md  app.py  pyproject.toml  replit.md
ChemDesigner/attached_assets/: Pasted--Graph-Based-Generative-Chemistry-with-RL-Driven-Property-Optimization-Project-Description--1757228185143_1757228185144.txt  Pasted-PROJECT-ChemDesigner-AI-Powered-Molecular-Discovery-Platform-GOAL-high-level-Build-a-profes-1757254082338_1757254082338.txt  Pasted-this-is-suggestion-so-think-and-do-dont-overrwrite-all-so-think-that-what-to-do-and-best-thing-B-1757254154847_1757254154847.txt
ChemDesigner/services/: generator.py  molecular.py  properties.py
ChemDesigner/templates/: analyze.html  base.html  generate.html  index.html  optimize.html  risk.html  screen.html
chemscreen/: __init__.py  descriptors.py  druglikeness.py  explain.py  ranking.py  reference_data.py  scoring.py  similarity.py  synthesis.py  validation.py
chemscreen/data/: approved_drugs.py  decoys.py
data/: benchmark_results.json
models/: metrics.json
scripts/: explain_examples.py  modes_examples.py  run_benchmark.py  score_examples.py  similarity_examples.py  train_toxicity_models.py
tests/: conftest.py  test_descriptors.py  test_druglikeness.py  test_druglikeness_branches.py  test_explain.py  test_invalid_input.py  test_modes.py  test_ranking.py  test_reference_data.py  test_scoring.py  test_similarity.py  test_synthesis.py  test_toxicity_alerts.py  test_toxicity_inference.py  test_toxicity_models.py  test_validation.py
(+14 files in other folders)
