[project]
name = "chemscreen"
version = "0.2.0"
description = "AI-Assisted Drug Candidate Screening and Ranking System"
requires-python = ">=3.11"
dependencies = [
    "rdkit>=2024.3.1",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "joblib>=1.3",
]

[project.optional-dependencies]
training = [
    "PyTDC>=0.4",
    "pandas>=2.0",
    "setuptools>=70,<81",  # PyTDC 0.4 imports pkg_resources, removed in setuptools 81
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chemscreen"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --strict-markers"

# PyTDC still pins legacy `rdkit-pypi`, which has no cp312 wheel. The official
# `rdkit` package supplies the same module namespace, so we instruct uv to skip
# rdkit-pypi during resolution. Our `rdkit` runtime dep covers the imports.
[tool.uv]
override-dependencies = [
    "rdkit-pypi ; sys_platform == 'unsupported'",
]
